<resources>
    <string name="app_name">adas</string>
    <string name="log_toggle">Toggle logging</string>
    <string name="can_label">CAN</string>
    <string name="can_online">online</string>
    <string name="can_offline">offline</string>
    <string name="params_toggle">Parameters</string>
    <string name="params_title">Parameters</string>
    <string name="params_hint">Live: rpy / X Y H move overlay (+ warp). Save writes filesDir for next native start.</string>
    <string name="params_section_camera">Lines: rpy + X Y H (live)</string>
    <string name="params_section_pp">Pure Pursuit</string>
    <string name="params_reset">Reset</string>
    <string name="params_save">Save</string>
</resources>
